@@ -6,6 +6,7 @@
 - NXSL node object attribute snmpSysDescription renamed back to sysDescription
 - Selectors in NXSL
 - Subnet mask for synthetic subnets can be set in server configuration
+- Added cumulative counters for server DB writer requests
 - Management console:
 	- Object tool input fields can be rearranged
 - Fixed issues: #847, #948, #967
